--- a/_config.yml
+++ b/_config.yml
@@ -43,12 +43,12 @@ menu:
 # 站点运行开始时间.
 time:
   enable: false
-  year: 2019 # 年份
-  month: 06 # 月份
-  date: 28 # 日期
-  hour: 00 # 小时
-  minute: 00 # 分钟
-  second: 00 # 秒
+  year: 2022 # 年份
+  month: 12 # 月份
+  date: 25 # 日期
+  hour: 22 # 小时
+  minute: 22 # 分钟
+  second: 22 # 秒
 
 # Index cover carousel configuration.
 # 首页封面轮播图的相关配置.
@@ -154,7 +154,7 @@ indexbtn:
   enable: true
   name: Github
   icon: fab fa-github-alt
-  url: https://github.com/blinkfox/hexo-theme-matery
+  url: https://github.com/OscarZs
 
 # The configurations of the second line of home banner
 # icon/button will not show up if you leave the corresponding socialLink empty
@@ -218,15 +218,15 @@ mathjax:
 postInfo:
   date: true # 发布日期
   update: false # 更新日期
-  wordCount: false # 文章字数统计
-  totalCount: false # 站点总文章字数
-  min2read: false # 文章阅读时长
-  readCount: false # 文章阅读次数
+  wordCount: true # 文章字数统计
+  totalCount: true # 站点总文章字数
+  min2read: true # 文章阅读时长
+  readCount: true # 文章阅读次数
 
 # Whether to activate the 'love' effect of clicking on the page.
 # 是否激活点击页面的'爱心'效果，默认激活.
 clicklove:
-  enable: true
+  enable: false
 
 # | 文件名             | 说明                   |
 # | :----------------- | :--------------------- |
@@ -388,17 +388,6 @@ valine:
   placeholder: 'just go go' # Comment Box placeholder
   background: /medias/comment_bg.png
   coolpushkey: 
-
-# The configuration of the MiniValine comment module is not activated by default.
-# To use it, activate the configuration item.
-# MiniValine 评论模块的配置，默认为不激活，如要使用，就请激活该配置项
-# See: https://github.com/MiniValine/MiniValine
-minivaline:
-  enable: false
-  # 更多选项 https://minivaline.js.org/docs/cn/#/Options 按照yml格式继续填写即可 （除了 [el] 选项）  
-  # emoticonUrl 等列表选项 可参考 https://github.com/MiniValine/hexo-next-minivaline
-  # 下面是一个例子：
-  serverURL: https://minivaline.your-domain.top
 
 # The configuration of the Waline comment module is not activated by default.
 # To use it, activate the configuration item.
