--- a/_config.yml
+++ b/_config.yml
@@ -71,10 +71,10 @@ cover:
 # index page dream text,
 # 配置首页显示"梦想"的语句.
 dream:
-  enable: false
+  enable: true
   showTitle: true
-  title: 
-  text: 
+  title: By 比企谷八幡
+  text: 尽管扭曲幼稚失败，但是只要坚持下去就是正义。如果只是被人否定就要改变的话，那种东西既不是梦想也不是自我。
 
 # Whether to display the musics.
 # 是否在首页显示音乐.
@@ -199,7 +199,7 @@ reward:
 copyright:
   enable: true
   minCharNumber: 120 # 至少复制多少个字符就追加版权信息.
-  description: 本文章著作权归作者所有，任何形式的转载都请注明出处。
+  description: 本文章著作权归OscarZs所有，任何形式的转载都请注明出处。
 
 # Whether to activate the mathjax, this is a global configuration, but the post still does not open the mathjax rendering.
 # Considering that the mathjax loading is time consuming,
@@ -631,9 +631,13 @@ subtitle:
   backSpeed: 50 # 删除速度
   sub:
     - Spell at all costs， to rush you in the future.
+    - 努力是不会背叛自己的，虽然梦想会背叛。努力不一定能实现梦想，但是曾经努力过的事实却足以安慰自己。
     - If you shed tears when you miss the sun, you also miss the stars.
+    - 因为重要，因为不想失去。隐藏着，伪装着。正因如此才一定会失去。
     - Let life be beautiful like summer flowers and death like autumn leaves.
+    - 自称理解了能教他人什么的都太狂妄了。自以为理解了是罪与恶。虽然如此，我们不得不自欺欺人地活下去。
     - A year from now you will wish you had started today.
+    - 属于我们的样子总是会在某个地方产生分歧... 那么真心...真正的我们又在哪里呢？
 
 # 手机二级菜单.
 navMenu:
